--- a/scandocs_ssh/v4/html/viewer/v36.css
+++ b/scandocs_ssh/v4/html/viewer/v36.css
@@ -277,3 +277,9 @@ p {
     50% { transform: rotate(180deg);}
     100% { transform: rotate(360deg);}
 }
+
+.aMain {
+    position: fixed;
+    top: 2vh;
+    right: 2vw;
+  }
